# grooveforge

./: .gitignore  AGENTS.md  CHANGELOG.fr.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  TODO.md  analysis_options.yaml  build_lib.sh  index.html  libaudio_input.dylib  libdart_vst_host.dylib  project5.gf  pubspec.yaml  roadmap-v2.md  vocoder_feature.md.resolved
.agents/rules/: grooveforge-standards.md
.cursor/rules/: grooveforge-standards.mdc
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  web_deploy.yml
android/app/: build.gradle.kts
assets/drums/: batucada.gfdrum  celtic_breton_an_dro.gfdrum  celtic_irish_jig.gfdrum  celtic_plinn.gfdrum  celtic_scottish_reel.gfdrum  disco.gfdrum  fanfare_march.gfdrum  funk_tight.gfdrum  jazz_halftime_shuffle.gfdrum  jazz_swing.gfdrum  jazz_waltz.gfdrum  latin_bossa_nova.gfdrum  latin_cha_cha.gfdrum  rock_basic.gfdrum  second_line.gfdrum
assets/plugins/: arpeggiator.gfpd  chord_expand.gfpd  chorus.gfpd  compressor.gfpd  delay.gfpd  eq.gfpd  microtone.gfpd  reverb.gfpd  wah.gfpd
assets/soundfonts/: LICENSE.txt
css/: site.css
demo/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  main.dart.mjs  main.dart.wasm  version.json
demo/assets/: AssetManifest.bin.json  CHANGELOG.fr.md  CHANGELOG.md  NOTICES
demo/js/: grooveforge_audio.js
docs/: features.fr.md  features.md  privacy.fr.md  privacy.md
docs/dev/: AUDIO_ROUTING_REDESIGN.md  ROADMAP.md  ROADMAP_ARCHIVE.md
docs/site/: features.fr.md  features.md  privacy.md
features/: index.html
fr/features/: index.html
fr/gfdrum/: index.html
fr/gfpd/: index.html
fr/midi-fx/: index.html
fr/privacy/: index.html
fr/vst/: index.html
gfdrum/: index.html
guide/: index.html
ios/Runner/: AppDelegate.swift  Info.plist  ThereminCameraPlugin.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: audio_engine.dart  cc_mapping_service.dart  cc_preferences.dart  chord_detector.dart  main.dart  midi_service.dart  preferences_screen.dart  sf2_parser.dart  virtual_piano.dart
lib/audio/: audio_source_descriptor.dart  routing_plan.dart  routing_plan_builder.dart
lib/constants/: soundfont_sentinels.dart
lib/l10n/: app_en.arb  app_fr.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_fr.dart
lib/models/: audio_graph_connection.dart  audio_looper_plugin_instance.dart  audio_port_id.dart  chord_detector.dart  drum_generator_plugin_instance.dart  drum_pattern_data.dart  gfpa_plugin_instance.dart  gm_instruments.dart  grooveforge_keyboard_plugin.dart  keyboard_display_config.dart  live_input_source_plugin_instance.dart  loop_track.dart  looper_plugin_instance.dart  plugin_instance.dart  plugin_role.dart  virtual_piano_plugin.dart  vst3_plugin_instance.dart
lib/plugins/: gf_jam_mode_plugin.dart  gf_keyboard_plugin.dart  gf_stylophone_plugin.dart  gf_theremin_plugin.dart  gf_vocoder_plugin.dart
lib/screens/: cc_preferences.dart  preferences_screen.dart  rack_screen.dart  splash_screen.dart  synthesizer_screen.dart  usb_audio_debug_screen.dart
lib/services/: audio_engine.dart  audio_graph.dart  audio_input_ffi.dart  audio_input_ffi_native.dart  audio_input_ffi_stub.dart  audio_looper_engine.dart  cc_mapping_service.dart  cc_param_registry.dart  drum_generator_engine.dart  drum_pattern_parser.dart  drum_pattern_registry.dart  file_picker_service.dart  gfpa_android_bindings.dart  gfpa_android_bindings_native.dart  gfpa_android_bindings_web.dart  libaudio_input.dylib  live_input_source_engine.dart  locale_provider.dart  looper_engine.dart  midi_service.dart  native_instrument_controller.dart  patch_drag_controller.dart  project_migration_service.dart  project_service.dart  rack_state.dart  sf2_parser.dart  theremin_distance_service.dart  transport_engine.dart  vst_host_service.dart  vst_host_service_desktop.dart  vst_host_service_stub.dart  wav_utils.dart
lib/widgets/: add_plugin_sheet.dart  audio_settings_bar.dart  channel_card.dart  jam_session_widget.dart  patch_cable_overlay.dart  (+6 more)
linux/: CMakeLists.txt
midi-fx/: index.html
modules/: index.html
native_audio/: CMakeLists.txt  audio_input.c  gf_phase_vocoder.c  gf_phase_vocoder.h  gf_pv_smoke_test.c  keyboard_synth.c  libaudio_input.dylib  vocoder_dsp.c  vocoder_dsp.h
native_audio/build_mac/: CMakeCache.txt  Makefile  cmake_install.cmake  libaudio_input.dylib
privacy/: index.html
scripts/: build_native_macos.sh
test/: chord_detector_test.dart  loop_track_test.dart  widget_test.dart
vst/: index.html
web/: index.html  manifest.json
website/: index.html
windows/: CMakeLists.txt
(+109 files in other folders)
